--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,11 @@
 
 .App-title {
   font-size: 2.5em;
-  margin-bottom: 1.8em;
+  margin-bottom: 0.05em;
+}
+.game-subheading {
+  margin-bottom: 2em;
+  font-weight: 500;
 }
 
 .App-intro {
@@ -70,7 +74,15 @@ button:focus {
 h1 {
   font-size: 3.5em;
   color: black;
+  margin-bottom: 0.5em;
 }
+
+h3 { 
+  padding-top: 0;
+  margin-top: -0.25em;
+  font-size: 2em;
+}
+
 
 .square {
   background: #ffffff;
