--- a/src/input.css
+++ b/src/input.css
@@ -44,7 +44,7 @@ button[type=submit] {
     text-decoration: none;
     color: white;
     padding: 0 20px;
-    margin-bottom: 43px;
+    margin-top: 15px;
     border-radius: 4px;
     z-index: 2;
 }
